@@ -1,5 +1,10 @@
 2012-12-12  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlevent.c: (gst_ttml_event_list_flush):
+	  - Send an extra buffer to clear the last span.
+
+2012-12-12  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer):
 	  - Generate newsegments starting from the incoming buffer timestamp, not
 	    the first produced buffer timestamp.
